--- a/q/273875.html
+++ b/q/273875.html
@@ -26,33 +26,45 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>058</td><td>C gcc</td><td>240703T045119Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273892#273892">Digital </a></td></tr>
-<tr d-ix="1"><td>035</td><td>Excel</td><td>240703T040741Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273891#273891">z..</a></td></tr>
-<tr d-ix="2"><td>011</td><td>Uiua</td><td>240703T005301Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273886#273886">noodle p</a></td></tr>
-<tr d-ix="3"><td>005</td><td>Nekomata</td><td>240703T020237Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273889#273889">alephalp</a></td></tr>
-<tr d-ix="4"><td>038</td><td>JavaScript V8</td><td>240703T011421Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273888#273888">l4m2</a></td></tr>
-<tr d-ix="5"><td>042</td><td>Python 3.8 prerelease</td><td>240702T225141Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273878#273878">squarero</a></td></tr>
-<tr d-ix="6"><td>016</td><td>K ngn/k</td><td>240703T000159Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273884#273884">Bubbler</a></td></tr>
-<tr d-ix="7"><td>016</td><td>J</td><td>240703T001653Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273885#273885">Bubbler</a></td></tr>
-<tr d-ix="8"><td>021</td><td>Retina 0.8.2</td><td>240702T235815Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273883#273883">Neil</a></td></tr>
-<tr d-ix="9"><td>026</td><td>brainfuck</td><td>240702T233900Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273882#273882">noodle p</a></td></tr>
-<tr d-ix="10"><td>057</td><td>Google Sheets</td><td>240702T230407Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273881#273881">doubleun</a></td></tr>
-<tr d-ix="11"><td>005</td><td>Jelly</td><td>240702T230349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273880#273880">Jonathan</a></td></tr>
-<tr d-ix="12"><td>003</td><td>Vyxal</td><td>240702T224503Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273877#273877">lyxal</a></td></tr>
-<tr d-ix="13"><td>016</td><td>APL Dyalog Unicode</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
+<tr d-ix="0"><td>013</td><td>Charcoal</td><td>240703T054954Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273893#273893">Neil</a></td></tr>
+<tr d-ix="1"><td>058</td><td>C gcc</td><td>240703T045119Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273892#273892">Digital </a></td></tr>
+<tr d-ix="2"><td>035</td><td>Excel</td><td>240703T040741Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273891#273891">z..</a></td></tr>
+<tr d-ix="3"><td>011</td><td>Uiua</td><td>240703T005301Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273886#273886">noodle p</a></td></tr>
+<tr d-ix="4"><td>005</td><td>Nekomata</td><td>240703T020237Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273889#273889">alephalp</a></td></tr>
+<tr d-ix="5"><td>038</td><td>JavaScript V8</td><td>240703T011421Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273888#273888">l4m2</a></td></tr>
+<tr d-ix="6"><td>042</td><td>Python 3.8 prerelease</td><td>240702T225141Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273878#273878">squarero</a></td></tr>
+<tr d-ix="7"><td>016</td><td>K ngn/k</td><td>240703T000159Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273884#273884">Bubbler</a></td></tr>
+<tr d-ix="8"><td>016</td><td>J</td><td>240703T001653Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273885#273885">Bubbler</a></td></tr>
+<tr d-ix="9"><td>021</td><td>Retina 0.8.2</td><td>240702T235815Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273883#273883">Neil</a></td></tr>
+<tr d-ix="10"><td>026</td><td>brainfuck</td><td>240702T233900Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273882#273882">noodle p</a></td></tr>
+<tr d-ix="11"><td>057</td><td>Google Sheets</td><td>240702T230407Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273881#273881">doubleun</a></td></tr>
+<tr d-ix="12"><td>005</td><td>Jelly</td><td>240702T230349Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273880#273880">Jonathan</a></td></tr>
+<tr d-ix="13"><td>003</td><td>Vyxal</td><td>240702T224503Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273877#273877">lyxal</a></td></tr>
+<tr d-ix="14"><td>016</td><td>APL Dyalog Unicode</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 58</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 13 bytes</h1>
+<pre><code>Ｅ↨Ｌθ²×ψＸ²κ↑¤θ
+</code></pre>
+<p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM3sUDDKbE4VcMnNS@9JEOjUFNHwQiIQzJzU4s1KnUUAvLLU4s0jHQUsjWBwJrLN78sVcMqtADIdMvMyQFqsP7/PzEpOSU1LT0jMys7Jzcv/79uWQ4A" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
+<pre><code>Ｅ↨Ｌθ²×ψＸ²κ
+</code></pre>
+<p>Reserve a number of lines corresponding to the <code>1</code>s in the base-<code>2</code> representation of the input length, with each line's length being each power of <code>2</code> in turn, according to its index.</p>
+<pre><code>↑¤θ
+</code></pre>
+<p>Fill that reserved area using the original input string, thereby partitioning it as required.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 58</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(s,i)char*s;{while(putchar(*s++))if(!(++i&amp;i-1))puts(&quot;&quot;);}
 </code></pre>
 <p><a href="https://tio.run/##FcrNEoIgFEDhfU9BNNNwRRutdjS9iyHILUXjJyvHZyfbnu/IopUy7dDKLjaKXHxocDiYa9LM5wjS1C7zYp4MdoqNMfwDyzznAKjZlnGOeywqgNU8oxTEktAG0tdoCQMybwjRjNY32SjdGrw/ut4O49P5EF/T@/Mtq@PpTPMKxHo6FaKzpBSbJf0A" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>Excel, 35 bytes</h1>
+<div id="pu2" class="pu"><h1>Excel, 35 bytes</h1>
 <pre class="lang-cpp prettyprint-override"><code>=LET(i,2^(ROW(1:99)-1),MID(A1,i,i))
 </code></pre>
 <p><a href="https://i.sstatic.net/bZklnArU.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/bZklnArU.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu2" class="pu"><h1>Uiua, 11 bytes</h1>
+<div id="pu3" class="pu"><h1>Uiua, 11 bytes</h1>
 <pre><code>⊕□⊚⍜ₙ⇡2+1⧻.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_1__RiDihpAg4oqV4pah4oqa4o2c4oKZ4oehMisx4qe7LgoKRiAiYWJjIgpGICJhYmNkZWZnIgpGICJhYmNkZWZnaGlqa2xtbm8iCg==" rel="nofollow noreferrer">Try it online!</a></p>
@@ -70,7 +82,7 @@
      # corresponding with indices   {&quot;a&quot; &quot;bc&quot; &quot;defg&quot; &quot;hijklmno&quot;}
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 5 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a>, 5 bytes</h1>
 <pre><code>JxËᶻL
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFZtJJurlLsgqWlJWm6Fiu8Kg53P9y222dJcVJyMVRwwU1VpUQlLqXEpGQImZKalo5gZWRmZefk5uUrQVQDAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -81,14 +93,14 @@ J       Split the input into a list of substrings
    ᶻL   Check that each substring has the corresponding length
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 38 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 38 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;x.replace(/|/g,_=&gt;i&amp;++i?'':' ',i=0)
 </code></pre>
 <p><a href="https://tio.run/##BcHRDkAgFADQX/Hk1qQ8mi0@xZLKTcow68G/5xyvXnXrC8@nfftiZclyzPwyZ1DaEPEJx2Y5Yt00OAEMUAFD2dGiU7xTMDwkRywBtejVWLeh38MRE1Bafg" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 <p>Separate by space</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 66 </s> <s> 65 </s> <s> 50 </s> <s> 49 </s> <s> 46 </s> 42 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 66 </s> <s> 65 </s> <s> 50 </s> <s> 49 </s> <s> 46 </s> 42 bytes</h1>
 <p><em>-1 byte by doing away with</em> <code>int.bit_length()</code><em>.</em><br />
 <em>-15 bytes: recursion for the win!</em><br />
 <em>-1 byte by using list unpacking instead of</em> <code>list()</code><em>.</em><br />
@@ -99,7 +111,7 @@ J       Split the input into a list of substrings
 </code></pre>
 <p><a href="https://tio.run/##BcE5DoAgEADAr9hxaKM2hoSXEIpFRFBYCKHA1@NM@ZrPuB@ljuFkhGQsTH1BuQrFuwa0qiuBWs@OdoVCLxtHNkoN2KijBMxpL3f78LwxYSaMjR8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="noreferrer">K (ngn/k)</a>, 16 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="noreferrer">K (ngn/k)</a>, 16 bytes</h1>
 <pre><code>{(&amp;*/'2\'!#x)_x}
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJxLs6rWUNPSVzeKUVdUrtCMr6jl4kpTUEpMSk5JTUtXQmJnZGZl5+Tm5SsBAGsLD14=" rel="noreferrer">Try it online!</a></p>
@@ -119,7 +131,7 @@ J       Split the input into a list of substrings
               _x     cut x with those indices (&quot;a&quot;; &quot;bc&quot;; &quot;defg&quot;)
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 16 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, 16 bytes</h1>
 <pre><code>&lt;;.1~1=1#.[:#:#\
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT0F9TQFWysFdR0FAwUrINbVU3AO8nFbWlqSpmuxwcZaz7DO0NZQWS_aStlKOQYifFNbkys1OSNfIU1BPTEpOSU1LV0dXSAjMys7JzcvXx2iZcECCA0A" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -131,23 +143,23 @@ J       Split the input into a list of substrings
 &lt;;.1~                cut at 1s and box each word ('a'; 'bc'; 'defg')
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 21 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 21 bytes</h1>
 <pre><code>!`(?&lt;=(.)*).(?&lt;-1&gt;.)*
 </code></pre>
 <p><a href="https://tio.run/##K0otycxL/P9fMUHD3sZWQ09TS1MPyNI1tAMy//9PTEpOSU1Lz8jMys7JzcsHAA" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Explanation: The last stage is by default a Match stage if there is no replacement pattern for it to be a Replace stage. The <code>!</code> changes the output from the number of matches (in decimal) to the matches themselves (on separate lines). The pattern then uses a .NET balancing group to count its match index (which will be one less than a power of <code>2</code>) and allow one character more than that to be matched.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">brainfuck</a>, 26 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://github.com/TryItOnline/brainfuck" rel="nofollow noreferrer">brainfuck</a>, 26 bytes</h1>
 <pre><code>+[[&gt;&gt;++&lt;,.&lt;-]+++++++++.&gt;&gt;]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70yqSgxMy-tNDl7wYKlpSVpuha7tKOj7ey0tW109Gx0Y7VhQM_OLhaiAKpuwfrEpOSU1LT0jMys7JzcvHyIMAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Output separated by tabs (ASCII 9) with some extra tabs at the end.</p>
 </div>
-<div id="pu10" class="pu"><h1>Google Sheets, 57 bytes</h1>
+<div id="pu11" class="pu"><h1>Google Sheets, 57 bytes</h1>
 <pre><code>=index(mid(A1,2^sequence(99,1,),2^(1+sequence(99,1,-1))))
 </code></pre>
 <p><img src="https://i.sstatic.net/xVrTTani.png" alt="screenshot" /></p>
 </div>
-<div id="pu11" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 5 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu12" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 5 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>J2*œṖ
 </code></pre>
 <p>A monadic Link that accepts a list and yields a list of lists.</p>
@@ -159,7 +171,7 @@ J     - indices -&gt; [1..len(S)]
    œṖ - partition {S} at {those} indices
 </code></pre>
 </div>
-<div id="pu12" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
+<div id="pu13" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 3 bytes</h1>
 <pre><code>ẏEẇ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCLhuo9F4bqHIiwiIiwiYWJjZGVmZ2hpamtsbW5vIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -173,7 +185,7 @@ J     - indices -&gt; [1..len(S)]
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu13" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, 16 bytes</h1>
+<div id="pu14" class="pu"><h1><a href="https://www.dyalog.com/" rel="nofollow noreferrer">APL (Dyalog Unicode)</a>, 16 bytes</h1>
 
 <p>Anonymous tacit prefix function. Requires 0-based indexing (<code>⎕IO←0</code>) which is default on many systems.</p>
 <pre class="lang-apl prettyprint-override"><code>⊢⊂⍨≢↑∘∊1↑¨⍨2*⍳∘≢
