--- a/q/142037.html
+++ b/q/142037.html
@@ -60,7 +60,7 @@
 <pre><code>v-&gt;(m=1:max(v...)).*(@.v'÷m&gt;0)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m700qzQnM3HBojTbpaUlaboW-8t07TRybQ2tchMrNMr09PQ0NfW0NBz0ytQPb8-1M9CEqNqekllckJNYqZGmEW2sY6pjpGOoYxarCZVdsABCAwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>This solution creates a boolean matrix in a different manner than the R and Octave answers: the vectors <code>v</code> and <code>m</code> are integer-divided. This results in a matrix filled with integer numbers where <code>v</code> is greater or equal to <code>m</code> and zeroes otherwise. <code>&gt;0</code> turns it to a boolean matrix and multiplication by vector <code>m</code> gives the desired result.</p>
+<p>This solution creates a boolean matrix in a different manner than the R<sup><a href="https://codegolf.stackexchange.com/a/142047/101276">1</a></sup> and Octave<sup><a href="https://codegolf.stackexchange.com/a/142065/101276">2</a></sup> answers: the vectors <code>v</code> and <code>m</code> are integer-divided. This results in a matrix filled with the integer numbers where <code>v</code> is greater or equal to <code>m</code> and zeroes otherwise. <code>&gt;0</code> turns it to a boolean matrix and multiplication by vector <code>m</code> gives the desired result.</p>
 <p><strong>EDIT</strong> Below is the port of the Octave answer:</p>
 <h5><a href="https://julialang.org" rel="nofollow noreferrer">Julia</a>, 28 bytes</h5>
 <pre><code>v-&gt;(m=1:max(v...)).*(m.&lt;=v')
