--- a/q/273872.html
+++ b/q/273872.html
@@ -26,22 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>066</td><td>JavaScript V8</td><td>240703T010537Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273887#273887">l4m2</a></td></tr>
+<tr d-ix="0"><td>068</td><td>JavaScript V8</td><td>240703T010537Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273887#273887">l4m2</a></td></tr>
 <tr d-ix="1"><td>055</td><td>Wolfram Language Mathematica</td><td>240702T230231Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273879#273879">att</a></td></tr>
 <tr d-ix="2"><td>144</td><td>Python 3.8 prerelease</td><td>240702T221752Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273874#273874">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 66 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 68 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>x=&gt;x.map((c,i)=&gt;i-c&amp;&amp;(e=u=&gt;u-x[u&amp;&amp;print(u),u]&amp;&amp;e(x[u],x[u]=u))(i))
+<pre class="lang-javascript prettyprint-override"><code>x=&gt;x.map((c,i)=&gt;i-c&amp;&amp;(e=u=&gt;[u-x[u]&amp;&amp;e(x[u],x[u]=u),u&amp;&amp;print(u)])(i))
 </code></pre>
-<p><a href="https://tio.run/##FchLCoQwDADQ24QE0mH8gTCkF5EuSlGIoBTHSG9fdfMWb41X/KdD8@musS5Si/jy2WJGTKwkXl0CwFlMvLkyGUA@dD/RiC0AzPhc4BcxIlSiuuDUcsdfbnjgPtCv3g" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
-<s>
-<h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 76 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>x=&gt;{for(i=0;1+x[i];++i)i-x[i]&amp;&amp;(e=u=&gt;u-x[u&amp;&amp;print(u),u]&amp;&amp;e(x[u],x[u]=u))(i)}
-</code></pre>
-<p><a href="https://tio.run/##FYlbCoUwDAV3UxIawdcFocSNSD9ELMQPr1Qjgrj2Wn8OM3OW8Rz3Kcp2FGeXAqeL@zv8IwiXrrLXIN5ZKyjFh8bAzMq9ZlNjtijrAYqk@ZkhN0/fsCKC4JMCDDU1VFJFP2o9uvQC" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
-</s>
+<p><a href="https://tio.run/##JYpBCsMwDATvfYiQQC5J2kKhyB8xPhiTgAotJo2Cf@/E9LI77Ow77emXVy2b259tkVbF1@snFcTMSuLVZQCcxcQHczVYBJixN/cQIzaAsup3Q6NIqERtwTDxjQce@cH3SK/L/3DCqUaeeOhjOwA" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 <p>Assumes first step moving 0 to front is optimal</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 55 bytes</h1>
