--- a/q/273872.html
+++ b/q/273872.html
@@ -26,18 +26,43 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>068</td><td>JavaScript V8</td><td>240703T010537Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273887#273887">l4m2</a></td></tr>
-<tr d-ix="1"><td>055</td><td>Wolfram Language Mathematica</td><td>240702T230231Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273879#273879">att</a></td></tr>
-<tr d-ix="2"><td>144</td><td>Python 3.8 prerelease</td><td>240702T221752Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273874#273874">squarero</a></td></tr>
+<tr d-ix="0"><td>022</td><td>05AB1E</td><td>240703T071310Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273895#273895">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>068</td><td>JavaScript V8</td><td>240703T010537Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273887#273887">l4m2</a></td></tr>
+<tr d-ix="2"><td>055</td><td>Wolfram Language Mathematica</td><td>240702T230231Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273879#273879">att</a></td></tr>
+<tr d-ix="3"><td>144</td><td>Python 3.8 prerelease</td><td>240702T221752Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273874#273874">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 68 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 22 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>ā¨vDyè©yÊi®y‚0Kvy=0‚Â‡
+</code></pre>
+<p>Outputs the results on separated lines.</p>
+<p><a href="https://tio.run/##yy9OTMpM/f//SOOhFWUulYdXHFpZebgr89C6ykcNswy8yyptDYCMw02PGhb@/x9tpGOsY6BjqGOqYxILAA" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>ā                    # Push a list in the range [1, (implicit) input-length]
+ ¨                   # Remove the trailing item to make the range [1,length)
+  v                  # Pop and loop over each value `y`:
+   D                 #  Duplicate the current list
+    yè               #  Pop the copy, and push its (0-based) `y`'th value
+      ©              #  Store this value in variable `®` (without popping)
+      yÊi            #  If the `y`'th value does NOT equal `y` itself:
+         ®y‚         #   Push pair `[®,y]`
+            0K       #   Remove all 0s from this pair
+              vy     #   For-each over these one or two values:
+                =    #    Print the value with trailing newline (without popping)
+                0‚   #    Pair the current value with 0
+                  Â‡ #    Swap these two values in the list:
+                  Â  #     Bifurcate; short for Duplicate &amp; Reverse copy
+                   ‡ #     Transliterate
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 68 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;x.map((c,i)=&gt;i-c&amp;&amp;(e=u=&gt;[u-x[u]&amp;&amp;e(x[u],x[u]=u),u&amp;&amp;print(u)])(i))
 </code></pre>
 <p><a href="https://tio.run/##JYpBCsMwDATvfYiQQC5J2kKhyB8xPhiTgAotJo2Cf@/E9LI77Ow77emXVy2b259tkVbF1@snFcTMSuLVZQCcxcQHczVYBJixN/cQIzaAsup3Q6NIqERtwTDxjQce@cH3SK/L/3DCqUaeeOhjOwA" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 <p>Assumes first step moving 0 to front is optimal</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 55 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 55 bytes</h1>
 <pre><code>##~##&amp;~#&amp;@@@D@@PermutationCycles@Ordering@#/. 1-&gt;Set@$&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7X1m5TllZrU5ZzcHBwcXBISC1KLe0BCibn@dcmZyTWuzgX5SSWpSZl@6grK@nYKhrF5xa4qCi9j8AKFYSraxrl@agHKtWF5ycmFdXzVVtrGOiY6hjpGOmY1qrw1VtpAMRgHJBMiABEJer9j8A" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -49,7 +74,7 @@
                                            /. 1-&gt;Set@$  remove 1s
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 147 </s> <s> 146 </s> 144 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 147 </s> <s> 146 </s> 144 bytes</h1>
 <p><em>-1 byte and bonus performance improvement by assigning</em> <code>q</code> <em>outside of the inner</em> <code>while</code> <em>loop.</em><br />
 <em>-2 bytes by assigning</em> <code>o</code> <em>using tuple unpacking.</em></p>
 
