--- a/q/273875.html
+++ b/q/273875.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>034</td><td>Arturo</td><td>240703T074338Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273898#273898">chunes</a></td></tr>
+<tr d-ix="0"><td>032</td><td>Arturo</td><td>240703T074338Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273898#273898">chunes</a></td></tr>
 <tr d-ix="1"><td>046</td><td>R</td><td>240703T073506Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273896#273896">pajonk</a></td></tr>
 <tr d-ix="2"><td>020</td><td>APL+WIN</td><td>240703T062803Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273894#273894">Graham</a></td></tr>
 <tr d-ix="3"><td>013</td><td>Charcoal</td><td>240703T054954Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273893#273893">Neil</a></td></tr>
@@ -45,16 +45,16 @@
 <tr d-ix="16"><td>003</td><td>Vyxal</td><td>240702T224503Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273877#273877">lyxal</a></td></tr>
 <tr d-ix="17"><td>016</td><td>APL Dyalog Unicode</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 34 bytes</h1>
-<pre><code>$=&gt;[i:2chunk&amp;=&gt;[ceil log i 2'i+1]]
+<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, <sup><s>34</s></sup> 32 bytes</h1>
+<pre><code>$=&gt;[i:1chunk&amp;=&gt;[2i'i+1ceil log]]
 </code></pre>
-<p><a href="http://arturo-lang.io/playground?DoevEt" rel="nofollow noreferrer">Try it!</a></p>
+<p><a href="http://arturo-lang.io/playground?OJfhsI" rel="nofollow noreferrer">Try it!</a></p>
 <h3>Explanation</h3>
-<pre><code>$=&gt;[]         ; a function where input is assigned to &amp;
-i:2           ; assign 2 to i
-chunk&amp;=&gt;[]    ; split input by...
-ceil log i 2  ; bit length of i
-'i+1          ; increment i
+<pre><code>$=&gt;[]        ; a function where input is assigned to &amp;
+i:2          ; assign 2 to i
+chunk&amp;=&gt;[]   ; split input by...
+2i ceil log  ; bit length of i
+'i+1         ; increment i
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 46 bytes</h1>
