--- a/q/273875.html
+++ b/q/273875.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>057</td><td>Ruby</td><td>240703T091600Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273902#273902">int 21h </a></td></tr>
+<tr d-ix="0"><td>055</td><td>Ruby</td><td>240703T091600Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273902#273902">int 21h </a></td></tr>
 <tr d-ix="1"><td>005</td><td>Japt m</td><td>240703T085355Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273900#273900">Shaggy</a></td></tr>
 <tr d-ix="2"><td>006</td><td>05AB1E</td><td>240703T084621Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273899#273899">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>032</td><td>Arturo</td><td>240703T074338Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273898#273898">chunes</a></td></tr>
@@ -48,10 +48,10 @@
 <tr d-ix="19"><td>003</td><td>Vyxal</td><td>240702T224503Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273877#273877">lyxal</a></td></tr>
 <tr d-ix="20"><td>016</td><td>APL Dyalog Unicode</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 57 bytes</h1>
-<pre class="lang-ruby prettyprint-override"><code>f=-&gt;s,v=[],a=0{s.size&gt;0?f[s[a+1..],v&lt;&lt;s[0..a],a=a*2+1]:v}
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 55 bytes</h1>
+<pre class="lang-ruby prettyprint-override"><code>f=-&gt;s,v=[],a=0{s.size&gt;0?f[s[a+1..],v&lt;&lt;s[0..a],a*2+1]:v}
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWNy3TbHXtinXKbKNjdRJtDaqL9Yozq1LtDOzTooujE7UN9fRidcpsbIqjDfT0EkFKErWMtA1jrcpqIQbsKigtKVZIi1ZKTEpOSU1Lz8jMys7JzctXiuWCKIDZBAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m72kqDSpcsGCpaUlaboWN83TbHXtinXKbKNjdRJtDaqL9Yozq1LtDOzTooujE7UN9fRidcpsbIqjDfT0EoFKtIy0DWOtymoh2ncVlJYUK6RFKyUmJaekpqVnZGZl5-Tm5SvFckEUwOwBAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>@OP just to let you know, the easy tasks are welcome! :)</p>
 <p>I have build a recursion with three variables: the original string, the output vector and the counter. The function chops a string piece, adds it to vector and updates the counter until the string is empty.</p>
 </div>
