--- a/q/273872.html
+++ b/q/273872.html
@@ -59,6 +59,7 @@ if(i)                   # and if the array wasn't already sorted
      c(i                # return the swapped value
         ,f(a))}         # and recursively sort the swapped array
 </code></pre>
+<p><a href="https://ato.pxeger.com/run?1=TU47DoJAEO05xWo1E4cE_CQWjh5EKSa46BBEZNdoNJ7EBgtLD-RthGhh9fLyvvdH3bwutt67k1RuX3t-Hn0WTt-bjFcglHOM16rW0oNgoBnoLDxtNd1CTzCMMWcdxMYWzhrlnZwhIlnK3NkDdHqCQUuZNeGoS8syT2ahYgpKLUO8_eYWUjr-_wEpDGlEEcU0oTFikIqHvi3szpbemc5W2bVh06c2it-apvniBw" rel="nofollow noreferrer">Here</a> is a link to a version that prints-out each stage of the swapping, and <a href="https://ato.pxeger.com/run?1=jZBNTsMwEIXFNqcwYTOjjiU7bSlSM1yCZRskK3KIo9KfJFUjECdhExYsORCcBkfesGhpV_On972nef-o-68XW2-ag9k2m7rlz31byLvvx4KXYKhija-uAJfKQ-nyEq4NSo0Vu5EWdtVY4fjZdKDILMx9Y3cw3DOM_MjsMlaRV5tFlaXSYQ6O_IT4Flx-rh5y00KXyr8RIIeExqRI05QmiBTPxcqun9pScEyhg86vl-sYxY2YRcchmgLmIsjtCciQYsBcBBn_k0Sdlycn5BPvrnyGhPR5yDQKv-37UH8B" rel="nofollow noreferrer">here</a> is a link to various test cases concocted in <a href="https://codegolf.stackexchange.com/a/273895/95126">Kevin Cruijssen's answer</a>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>20</s> 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>[ÐÅΔNÊ}D(#s0k+=0‚Â‡
