--- a/q/273872.html
+++ b/q/273872.html
@@ -26,14 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>091</td><td>R</td><td>240703T092458Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273903#273903">Dominic </a></td></tr>
-<tr d-ix="1"><td>019</td><td>05AB1E</td><td>240703T071310Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273895#273895">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>025</td><td>Charcoal</td><td>240703T073611Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273897#273897">Neil</a></td></tr>
-<tr d-ix="3"><td>068</td><td>JavaScript V8</td><td>240703T010537Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273887#273887">l4m2</a></td></tr>
-<tr d-ix="4"><td>055</td><td>Wolfram Language Mathematica</td><td>240702T230231Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273879#273879">att</a></td></tr>
-<tr d-ix="5"><td>144</td><td>Python 3.8 prerelease</td><td>240702T221752Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273874#273874">squarero</a></td></tr>
+<tr d-ix="0"><td>114</td><td>Python 3.8 prerelease</td><td>240703T094940Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273906#273906">Jitse</a></td></tr>
+<tr d-ix="1"><td>091</td><td>R</td><td>240703T092458Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273903#273903">Dominic </a></td></tr>
+<tr d-ix="2"><td>019</td><td>05AB1E</td><td>240703T071310Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273895#273895">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>025</td><td>Charcoal</td><td>240703T073611Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273897#273897">Neil</a></td></tr>
+<tr d-ix="4"><td>068</td><td>JavaScript V8</td><td>240703T010537Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273887#273887">l4m2</a></td></tr>
+<tr d-ix="5"><td>055</td><td>Wolfram Language Mathematica</td><td>240702T230231Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273879#273879">att</a></td></tr>
+<tr d-ix="6"><td>144</td><td>Python 3.8 prerelease</td><td>240702T221752Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273874#273874">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>94</s> 91 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 114 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>def f(a):x=a.index;z=x(0);a[x(i:=z or next(j for j in a if x(j)!=j))]=0;a[z]=i;return a!=sorted(a)and[i]+f(a)or[i]
+</code></pre>
+<p><a href="https://tio.run/##FY1BCsIwEEWvMt3NYJBqFcQyJylZBJLgZJGUMULs5WPcPfiP//ZvfZW8PHbt3YcIER09G7uzZB/aenDDmVa3NZQnH1AUcmgVE8SBCSSDA4nQMNHEicjyPOzDsqwa6kfHPvG7aA1@PLvsN7Gnf6TooL6r5IoRt6uBxcBs4GLgbuBmifoP" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>94</s> 91 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>f=\(a){if(i&lt;-which(!a)-1)T=i+1 else i=max(0,a[a&gt;seq(a)-1])
 a[a==i]=0
 if(a[+T]&lt;-i)c(i,f(a))}
@@ -61,7 +68,7 @@ if(i)                   # and if the array wasn't already sorted
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=TU47DoJAEO05xWo1E4cE_CQWjh5EKSa46BBEZNdoNJ7EBgtLD-RthGhh9fLyvvdH3bwutt67k1RuX3t-Hn0WTt-bjFcglHOM16rW0oNgoBnoLDxtNd1CTzCMMWcdxMYWzhrlnZwhIlnK3NkDdHqCQUuZNeGoS8syT2ahYgpKLUO8_eYWUjr-_wEpDGlEEcU0oTFikIqHvi3szpbemc5W2bVh06c2it-apvniBw" rel="nofollow noreferrer">Here</a> is a link to a version that prints-out each stage of the swapping, and <a href="https://ato.pxeger.com/run?1=jZBNTsMwEIXFNqcwYTOjjiU7bSlSM1yCZRskK3KIo9KfJFUjECdhExYsORCcBkfesGhpV_On972nef-o-68XW2-ag9k2m7rlz31byLvvx4KXYKhija-uAJfKQ-nyEq4NSo0Vu5EWdtVY4fjZdKDILMx9Y3cw3DOM_MjsMlaRV5tFlaXSYQ6O_IT4Flx-rh5y00KXyr8RIIeExqRI05QmiBTPxcqun9pScEyhg86vl-sYxY2YRcchmgLmIsjtCciQYsBcBBn_k0Sdlycn5BPvrnyGhPR5yDQKv-37UH8B" rel="nofollow noreferrer">here</a> is a link to various test cases concocted in <a href="https://codegolf.stackexchange.com/a/273895/95126">Kevin Cruijssen's answer</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>20</s> 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>20</s> 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>[ÐÅΔNÊ}D(#s0k+=0‚Â‡
 </code></pre>
 <p>Outputs the results on separated lines.</p>
@@ -90,7 +97,7 @@ if(i)                   # and if the array wasn't already sorted
 </code></pre>
 <p>† The <code>+</code> acts as a <code>‚à</code> (pair and keep the maximum) here, since either the first value in the list is unsorted, in which case <code>ÅΔNÊ}</code> results in this first index 0 and <code>0k</code> results in the index we want to swap with, OR the first value is 0, in which case <code>ÅΔNÊ}</code> results in the index we want to swap with and <code>0k</code> results in 0. In either case, one of the two is 0, so using the <code>+</code> here is fine to save a byte.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 25 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 25 bytes</h1>
 <pre><code>Ｗ∨⌕θ⁰⌊Φθ⁻κλ«ＵＭθ∧⁻κι∨κι⟦Ｉι
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/788IzMnVUHDv0jDLTMvRaNQR8FAU0fBNzMvM7c0FyiWU5JaBBIFipQWa2TrKORogoBCNRenb2KBc35ubiJEmyOQgivKBJoBNBLM0tS05uIMKMrMK9GIdk4sLtHI1IwFCtX@/x8dbaSjYAy0UUfBUEfBVEfBJDb2v25ZDgA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -104,14 +111,14 @@ if(i)                   # and if the array wasn't already sorted
 </code></pre>
 <p>... output the number that <code>0</code> was swapped with.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 68 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 68 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;x.map((c,i)=&gt;i-c&amp;&amp;(e=u=&gt;[u-x[u]&amp;&amp;e(x[u],x[u]=u),u&amp;&amp;print(u)])(i))
 </code></pre>
 <p><a href="https://tio.run/##JYpBCsMwDATvfYiQQC5J2kKhyB8xPhiTgAotJo2Cf@/E9LI77Ow77emXVy2b259tkVbF1@snFcTMSuLVZQCcxcQHczVYBJixN/cQIzaAsup3Q6NIqERtwTDxjQce@cH3SK/L/3DCqUaeeOhjOwA" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 <p>Assumes first step moving 0 to front is optimal</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 55 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 55 bytes</h1>
 <pre><code>##~##&amp;~#&amp;@@@D@@PermutationCycles@Ordering@#/. 1-&gt;Set@$&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7X1m5TllZrU5ZzcHBwcXBISC1KLe0BCibn@dcmZyTWuzgX5SSWpSZl@6grK@nYKhrF5xa4qCi9j8AKFYSraxrl@agHKtWF5ycmFdXzVVtrGOiY6hjpGOmY1qrw1VtpAMRgHJBMiABEJer9j8A" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -123,7 +130,7 @@ if(i)                   # and if the array wasn't already sorted
                                            /. 1-&gt;Set@$  remove 1s
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 147 </s> <s> 146 </s> 144 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 147 </s> <s> 146 </s> 144 bytes</h1>
 <p><em>-1 byte and bonus performance improvement by assigning</em> <code>q</code> <em>outside of the inner</em> <code>while</code> <em>loop.</em><br />
 <em>-2 bytes by assigning</em> <code>o</code> <em>using tuple unpacking.</em></p>
 
