--- a/q/273872.html
+++ b/q/273872.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>114</td><td>Python 3.8 prerelease</td><td>240703T094940Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273906#273906">Jitse</a></td></tr>
+<tr d-ix="0"><td>111</td><td>Python 3.8 prerelease</td><td>240703T094940Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273906#273906">Jitse</a></td></tr>
 <tr d-ix="1"><td>091</td><td>R</td><td>240703T092458Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273903#273903">Dominic </a></td></tr>
 <tr d-ix="2"><td>019</td><td>05AB1E</td><td>240703T071310Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273895#273895">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>025</td><td>Charcoal</td><td>240703T073611Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273897#273897">Neil</a></td></tr>
@@ -34,11 +34,11 @@
 <tr d-ix="5"><td>055</td><td>Wolfram Language Mathematica</td><td>240702T230231Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273879#273879">att</a></td></tr>
 <tr d-ix="6"><td>144</td><td>Python 3.8 prerelease</td><td>240702T221752Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273874#273874">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 114 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 111 bytes</h1>
 
-<pre class="lang-python prettyprint-override"><code>def f(a):x=a.index;z=x(0);a[x(i:=z or next(j for j in a if x(j)!=j))]=0;a[z]=i;return a!=sorted(a)and[i]+f(a)or[i]
+<pre class="lang-python prettyprint-override"><code>def f(a):x=a.index;z=x(0);a[x(i:=z or next(j for j in a if x(j)-j))]=0;a[z]=i;return[i][a&gt;sorted(a):]or[i]+f(a)
 </code></pre>
-<p><a href="https://tio.run/##FY1BCsIwEEWvMt3NYJBqFcQyJylZBJLgZJGUMULs5WPcPfiP//ZvfZW8PHbt3YcIER09G7uzZB/aenDDmVa3NZQnH1AUcmgVE8SBCSSDA4nQMNHEicjyPOzDsqwa6kfHPvG7aA1@PLvsN7Gnf6TooL6r5IoRt6uBxcBs4GLgbuBmifoP" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##FY1BCsMgEEWvMssZakvatFAS7EXEhaDScaEytWBzeZvsPo/H@/XX3iXPzypj@BAhoqOla3fh7ENfN91xotWZjrzoDYpADr1hgrjPBJzBAUfomOiciKyednmzmlcJ7SvZsDXu9SnSgj/StsiOTsfNqMK5YURzUzArmBRcFTwU3C3R@AM" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>94</s> 91 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>f=\(a){if(i&lt;-which(!a)-1)T=i+1 else i=max(0,a[a&gt;seq(a)-1])
