--- a/q/273872.html
+++ b/q/273872.html
@@ -26,27 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>111</td><td>Python 3.8 prerelease</td><td>240703T094940Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273906#273906">Jitse</a></td></tr>
-<tr d-ix="1"><td>091</td><td>R</td><td>240703T092458Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273903#273903">Dominic </a></td></tr>
+<tr d-ix="0"><td>080</td><td>R</td><td>240703T092458Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273903#273903">Dominic </a></td></tr>
+<tr d-ix="1"><td>111</td><td>Python 3.8 prerelease</td><td>240703T094940Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273906#273906">Jitse</a></td></tr>
 <tr d-ix="2"><td>019</td><td>05AB1E</td><td>240703T071310Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273895#273895">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>025</td><td>Charcoal</td><td>240703T073611Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273897#273897">Neil</a></td></tr>
 <tr d-ix="4"><td>068</td><td>JavaScript V8</td><td>240703T010537Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273887#273887">l4m2</a></td></tr>
 <tr d-ix="5"><td>055</td><td>Wolfram Language Mathematica</td><td>240702T230231Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273879#273879">att</a></td></tr>
 <tr d-ix="6"><td>144</td><td>Python 3.8 prerelease</td><td>240702T221752Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273874#273874">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 111 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>def f(a):x=a.index;z=x(0);a[x(i:=z or next(j for j in a if x(j)-j))]=0;a[z]=i;return[i][a&gt;sorted(a):]or[i]+f(a)
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>94</s> <s>91</s> 80 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>f=\(a){i=max(j&lt;-which(a&lt;2),a[a&gt;seq(a)]*(j&lt;2))
+a[a==i]=1
+a[j]=i
+if(i&gt;1)c(i,f(a))}
 </code></pre>
-<p><a href="https://tio.run/##FY1BCsMgEEWvMssZakvatFAS7EXEhaDScaEytWBzeZvsPo/H@/XX3iXPzypj@BAhoqOla3fh7ENfN91xotWZjrzoDYpADr1hgrjPBJzBAUfomOiciKyednmzmlcJ7SvZsDXu9SnSgj/StsiOTsfNqMK5YURzUzArmBRcFTwU3C3R@AM" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>94</s> 91 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>f=\(a){if(i&lt;-which(!a)-1)T=i+1 else i=max(0,a[a&gt;seq(a)-1])
-a[a==i]=0
-if(a[+T]&lt;-i)c(i,f(a))}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72waMHaqtSi_OLyxILi_KIS26WlJWm6Fjej02xjNBI1qzPTNDJtdMszMpMzNBQTNXUNNUNsM7UNFVJzilMVMm1zEys0DHQSoxPtilMLNUDysZpcQK6tbWasrQEXUHditHZIrI1upmayRqYOkKupWQuxYg-ytRrJGkY6xjoGOoY6pjommpoQJQsWQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Ungolfed code:</p>
+<p><a href="https://ato.pxeger.com/run?1=m72waMHaqtSi_OLyxILi_KIS26WlJWm6FjcD0mxjNBI1qzNtcxMrNLJsdMszMpMzNBJtjDR1EqMT7YpTC4HSsVpAKSNNTS6gkK1tZqytIZCVFWubyZWZppFpZ6iZrJGpkwZUqFkLNVcB2TKNZA0jHWMdAx1DHVMdE01tQ01dQ4i6BQsgNAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>1-based input &amp; output indexing.</p>
+<p><a href="https://ato.pxeger.com/run?1=TY09DoJAEEZ7TkGoZnRJXNTEgqHxGEgxwSUskR_ZNRiNJ7HBwtIDeRvXYGE1X-Z7M-_-6MfXRfWtGbgzbW_pebJFuHmnBe2A8dr1urHAoURPU81nqOJwKHVeAscRCk45MeroyGzmqgjRcysinZF0qcpIe7oAnUjMQYvCgXj7KbbcGPp3Qw6RWIqFkGItVjiXGEovZwuBOqhaNdb4X7RTe5_8QLhznF6N4zQ_" rel="nofollow noreferrer">Here</a> is a link to a version that prints-out each stage of the swapping, and <a href="https://ato.pxeger.com/run?1=jdC9DoIwEAfwuPIUBJc7PRJaPxOpz-CuDA0BqVFRwEA0PokLDo4-kD6NNV0c1DD10rv87p-7XLP6foyyNC_lLk-zQtwOReyOH7NYLEDiSYmNrGDlu2WiwgSkz5HkXE7zaK_bQUe3OKKlv4RQgWC6WgVCWSoGNWUYgqJYD-LZuM_WMpQFVL77uRRC4NQjjxgNqI9dhi4jZ2Kvo-2ySGzhkKmgQnIWWwfttj2yvkOMDNUYGv6A3mneVGOo9yeR14zgP4i-TuHpLJxYM2hgmXvXtXlf" rel="nofollow noreferrer">here</a> is a link to various test cases concocted in <a href="https://codegolf.stackexchange.com/a/273895/95126">Kevin Cruijssen's answer</a>.</p>
+<hr />
+<p>Ungolfed, original <a href="https://ato.pxeger.com/run?1=m72waMHaqtSi_OLyxILi_KIS26WlJWm6Fjfj0mxjNBJ1smwNNasz0zQybXTLMzKTMzQUEzV1DTWzbDO1DRVSc4pTFTJtcxMrNAx0EqMT7YpTCzVA8rGaXECurW1mrK0BF1B3YnRWrI1upmayRqYOkKepWQuxZQ-yzRrJGkY6xjoGOoY6pjommpoQJQsWQGgA" rel="nofollow noreferrer">0-based version</a></p>
 <pre><code>zeroswapsort=
 f=function(a            # recursive function with argument
                         # a = array to sort
@@ -66,7 +64,12 @@ if(i)                   # and if the array wasn't already sorted
      c(i                # return the swapped value
         ,f(a))}         # and recursively sort the swapped array
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=TU47DoJAEO05xWo1E4cE_CQWjh5EKSa46BBEZNdoNJ7EBgtLD-RthGhh9fLyvvdH3bwutt67k1RuX3t-Hn0WTt-bjFcglHOM16rW0oNgoBnoLDxtNd1CTzCMMWcdxMYWzhrlnZwhIlnK3NkDdHqCQUuZNeGoS8syT2ahYgpKLUO8_eYWUjr-_wEpDGlEEcU0oTFikIqHvi3szpbemc5W2bVh06c2it-apvniBw" rel="nofollow noreferrer">Here</a> is a link to a version that prints-out each stage of the swapping, and <a href="https://ato.pxeger.com/run?1=jZBNTsMwEIXFNqcwYTOjjiU7bSlSM1yCZRskK3KIo9KfJFUjECdhExYsORCcBkfesGhpV_On972nef-o-68XW2-ag9k2m7rlz31byLvvx4KXYKhija-uAJfKQ-nyEq4NSo0Vu5EWdtVY4fjZdKDILMx9Y3cw3DOM_MjsMlaRV5tFlaXSYQ6O_IT4Flx-rh5y00KXyr8RIIeExqRI05QmiBTPxcqun9pScEyhg86vl-sYxY2YRcchmgLmIsjtCciQYsBcBBn_k0Sdlycn5BPvrnyGhPR5yDQKv-37UH8B" rel="nofollow noreferrer">here</a> is a link to various test cases concocted in <a href="https://codegolf.stackexchange.com/a/273895/95126">Kevin Cruijssen's answer</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 111 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>def f(a):x=a.index;z=x(0);a[x(i:=z or next(j for j in a if x(j)-j))]=0;a[z]=i;return[i][a&gt;sorted(a):]or[i]+f(a)
+</code></pre>
+<p><a href="https://tio.run/##FY1BCsMgEEWvMssZakvatFAS7EXEhaDScaEytWBzeZvsPo/H@/XX3iXPzypj@BAhoqOla3fh7ENfN91xotWZjrzoDYpADr1hgrjPBJzBAUfomOiciKyednmzmlcJ7SvZsDXu9SnSgj/StsiOTsfNqMK5YURzUzArmBRcFTwU3C3R@AM" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>20</s> 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>[ÐÅΔNÊ}D(#s0k+=0‚Â‡
