--- a/q/17305.html
+++ b/q/17305.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>110</td><td>Zsh</td><td>240702T124858Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273868#273868">roblogic</a></td></tr>
+<tr d-ix="0"><td>109</td><td>Zsh</td><td>240702T124858Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273868#273868">roblogic</a></td></tr>
 <tr d-ix="1"><td>025</td><td>Perl 5 + plF M5.10.0</td><td>180806T120712Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/170065#170065">Dom Hast</a></td></tr>
 <tr d-ix="2"><td>088</td><td>Ruby</td><td>140106T134244Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/17761#17761">manatwor</a></td></tr>
 <tr d-ix="3"><td>097</td><td>R</td><td>240701T094454Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273853#273853">int 21h </a></td></tr>
@@ -75,18 +75,15 @@
 <tr d-ix="46"><td>278</td><td>C</td><td>140103T154137Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/17325#17325">wjl</a></td></tr>
 <tr d-ix="47"><td>nan</td><td></td><td>140103T134038Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/17311#17311">marinus</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <s>139</s> 110 bytes</h1>
-<pre class="lang-sh prettyprint-override"><code>for i;n=$[$#i&gt;n?$#i:n]
-for i;j+=${(r:n:)i}
-for i ({1..$n})w=`for k ({1..$#})printf $j[i+(k-1)*n]`&amp;&amp;&lt;&lt;&lt;${w//% }
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>139</s> <s>110</s></sub> 109 bytes</h1>
+<pre class="lang-sh prettyprint-override"><code>for i;n=$[$#i&gt;n?$#i:n];for i;A+=(${(r:n:)i})
+for k ({1..$n})w=`for j ({1..$#})printf ${A[j][k]}`&amp;&amp;&lt;&lt;&lt;${w//% }
 </code></pre>
-<p><a href="https://tio.run/##LchBC4IwGIDhu7/iYy7ZkpSupnno1L2bCA5SmuI3mQursd@@Eru88D6f@eE7xq3vlAZ5woJWNJRnLH/NsA427uOCWqYzzLh0mwGzxySh6PhSNKsMfwkdn7RE0wHtKxmz4XDke6ybKMrznNolTXfgvAuCDsgVxAgCTPsyCQFy0wLnSc0tjO36F4HwVk@4K5CmJP4L" rel="nofollow noreferrer">Try it Online!</a>
-<sub><s><a href="https://tio.run/##LYzLCoMwFAX3fsVFU0kqKt36qIWuuu9OBAONNIpXiSm2lXx7qtjNgRmG852etqFssc2gQKaYk5J48ozFuglWzq7bIKdkoZcpSZg0zPeVGAXXQEoM17CCLXDBZXsPdDlFEUHD5rzeTPc3nmHpqCTqBkhbyoB24Ykdsap9P8syssxxfABjjeM04N6A98BBi7eO1u@74jiNwySgFxtfOcJneMFjAKkL1/4A" rel="nofollow noreferrer" title="Zsh – Try It Online">139b</a></s> - it now beats the bash answer 😀</sub></p>
-<ul>
-<li>1: find the longest string length, <code>n</code></li>
-<li>2: make a long string <code>j</code> with all the inputs, right-padding each to <code>n</code></li>
-<li>3: piecemeal iterations over parts of <code>j</code>. <code>${w//% }</code> trims trailing spaces.</li>
-</ul>
+<p><a href="https://tio.run/##LchPC4IwGIDxu5/iZa7YCJSu/kmkU/duIjjI0RTfyVxYjX32ldTlgef3Xu5BMu6C1AZUjiVtaKxOWH2bYZv/uD6UjDpmMsy48jzadATmjklC0fO17DYZ/hJ7PhuFVgJ1dTO0zdj6br8vioK6NU134IOPIgnkAmICAbZ/2oQAuRqBy6yXHqZ@@7NAeOkH3DQoW5HwAQ" rel="nofollow noreferrer">Try it online!</a>
+  <sub><s><a href="https://tio.run/##LchBC4IwGIDhu7/iYy7ZkpSupnno1L2bCA5SmuI3mQursd@@Eru88D6f@eE7xq3vlAZ5woJWNJRnLH/NsA427uOCWqYzzLh0mwGzxySh6PhSNKsMfwkdn7RE0wHtKxmz4XDke6ybKMrznNolTXfgvAuCDsgVxAgCTPsyCQFy0wLnSc0tjO36F4HwVk@4K5CmJP4L" rel="nofollow noreferrer">110b</a></s>,
+<s><a href="https://tio.run/##LYzLCoMwFAX3fsVFU0kqKt36qIWuuu9OBAONNIpXiSm2lXx7qtjNgRmG852etqFssc2gQKaYk5J48ozFuglWzq7bIKdkoZcpSZg0zPeVGAXXQEoM17CCLXDBZXsPdDlFEUHD5rzeTPc3nmHpqCTqBkhbyoB24Ykdsap9P8syssxxfABjjeM04N6A98BBi7eO1u@74jiNwySgFxtfOcJneMFjAKkL1/4A" rel="nofollow noreferrer" title="Zsh – Try It Online">139b</a></s></sub></p>
+<p>Find the longest string length, <code>n</code>. Construct array <code>A</code> from the input 'lines', right-padding each to <code>n</code>. Take slices of <code>A</code> to transpose the input lines.</p>
+<p>Array slicing is conceptually simpler than the previous approach, but only saves 1 byte in the end!</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-plF -M5.10.0</code>, 25 bytes</h1>
 <p>Utilises ANSI escape sequences.</p>
