--- a/q/273875.html
+++ b/q/273875.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>005</td><td>Husk</td><td>240703T123630Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273911#273911">Dominic </a></td></tr>
-<tr d-ix="1"><td>006</td><td>05AB1E</td><td>240703T084621Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273899#273899">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>043</td><td>PowerShell</td><td>240703T115900Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273910#273910">user3141</a></td></tr>
-<tr d-ix="3"><td>020</td><td>GolfScript</td><td>240703T115536Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273909#273909">Twilight</a></td></tr>
+<tr d-ix="0"><td>020</td><td>GolfScript</td><td>240703T115536Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273909#273909">Twilight</a></td></tr>
+<tr d-ix="1"><td>005</td><td>Husk</td><td>240703T123630Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273911#273911">Dominic </a></td></tr>
+<tr d-ix="2"><td>006</td><td>05AB1E</td><td>240703T084621Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273899#273899">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>043</td><td>PowerShell</td><td>240703T115900Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273910#273910">user3141</a></td></tr>
 <tr d-ix="4"><td>015</td><td>K ngn/k</td><td>240703T112728Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273908#273908">ovs</a></td></tr>
 <tr d-ix="5"><td>009</td><td>Uiua</td><td>240703T112631Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273907#273907">noodle p</a></td></tr>
 <tr d-ix="6"><td>041</td><td>Google Sheets</td><td>240702T230407Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273881#273881">doubleun</a></td></tr>
@@ -53,7 +53,17 @@
 <tr d-ix="24"><td>003</td><td>Vyxal</td><td>240702T224503Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273877#273877">lyxal</a></td></tr>
 <tr d-ix="25"><td>016</td><td>APL Dyalog Unicode</td><td>240702T224208Z</td><td><a href="https://codegolf.stackexchange.com/questions/273875/segments-of-a-string-doubling-in-length/273876#273876">Ad&#225;</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 5 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://www.golfscript.com/golfscript/" rel="nofollow noreferrer">GolfScript</a>, 20 bytes</h1>
+<pre><code>-1%.,{.,2/)/~}*]`-1%
+</code></pre>
+<p><a href="https://tio.run/##S8/PSStOLsosKPn/X9dQVU@nWk/HSF9Tv65WKzYBKPD/f2JSckpqWnpGZlZ2Tm5ePgA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
+<p>Outputs like this, if you consider it valid output: <code>]&quot;a&quot; &quot;bc&quot; &quot;defg&quot; &quot;hijklmno&quot;[</code></p>
+<p>Two other 20 byte solutions with weird output format:</p>
+<pre><code>.,,{2\?(&quot; &quot;*}%n*]zip
+1/.,,{2+.(&amp;!n*}%]zip
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 5 bytes</h1>
 <pre><code>C:1İ2
 </code></pre>
 <p><a href="https://tio.run/##yygtzv7/39nK8MgGo////ycmJaekpqVnZGZl5@Tm5QMA" rel="nofollow noreferrer" title="Husk – Try It Online">Try it online!</a></p>
@@ -63,7 +73,7 @@
         # (starting at 2)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 6 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>gÝo£õÜ
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f8//fDc/EOLD289POf//8Sk5JTUtPSMzKzsnNy8fAA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -87,7 +97,7 @@
         # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 43 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/TryItOnline/TioSetup/wiki/Powershell" rel="nofollow noreferrer">PowerShell</a>, 43 bytes</h1>
 
 <pre class="lang-powershell prettyprint-override"><code>%{for($i=1;$_[$i];$i*=2){$_|% S*g($i-1)$i}}
 </code></pre>
@@ -98,12 +108,6 @@ Relevant golfing:</p>
 <li>The loop exit condition <code>$_[$i]</code> tests just whether there is still a character at the current index; way shorter than <code>$i-lt$_.Length</code></li>
 <li><code>$_|% S*g($i-1)$i</code> takes the input string in <code>$_</code>, pipes it to <code>%</code> (an alias for ForEach-Object), calls the string object's member 'Substring' (the only member matching <code>S*g</code>), passing the start index and the length of the substring to retrieve. Shorter than <code>$_.Substring($i-1,$i)</code></li>
 </ul>
-</div>
-<div id="pu3" class="pu"><h1><a href="http://www.golfscript.com/golfscript/" rel="nofollow noreferrer">GolfScript</a>, 20 bytes</h1>
-<pre><code>-1%.,{.,2/)/~}*]`-1%
-</code></pre>
-<p><a href="https://tio.run/##S8/PSStOLsosKPn/X9dQVU@nWk/HSF9Tv65WKzYBKPD/f2JSckpqWnpGZlZ2Tm5ePgA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
-<p>Outputs like this, if you consider it valid output: <code>]&quot;a&quot; &quot;bc&quot; &quot;defg&quot; &quot;hijklmno&quot;[</code></p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 15 bytes</h1>
 <pre><code>{x@.=+|\2\!-#x}
