--- a/q/273872.html
+++ b/q/273872.html
@@ -26,16 +26,22 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td>Jelly</td><td>240703T131347Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273915#273915">Jonathan</a></td></tr>
-<tr d-ix="1"><td>079</td><td>R</td><td>240703T092458Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273903#273903">Dominic </a></td></tr>
-<tr d-ix="2"><td>059</td><td>JavaScript V8</td><td>240703T010537Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273887#273887">l4m2</a></td></tr>
-<tr d-ix="3"><td>111</td><td>Python 3.8 prerelease</td><td>240703T094940Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273906#273906">Jitse</a></td></tr>
+<tr d-ix="0"><td>109</td><td>Python 3.8 prerelease</td><td>240703T094940Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273906#273906">Jitse</a></td></tr>
+<tr d-ix="1"><td>015</td><td>Jelly</td><td>240703T131347Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273915#273915">Jonathan</a></td></tr>
+<tr d-ix="2"><td>079</td><td>R</td><td>240703T092458Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273903#273903">Dominic </a></td></tr>
+<tr d-ix="3"><td>059</td><td>JavaScript V8</td><td>240703T010537Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273887#273887">l4m2</a></td></tr>
 <tr d-ix="4"><td>019</td><td>05AB1E</td><td>240703T071310Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273895#273895">Kevin Cr</a></td></tr>
 <tr d-ix="5"><td>025</td><td>Charcoal</td><td>240703T073611Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273897#273897">Neil</a></td></tr>
 <tr d-ix="6"><td>055</td><td>Wolfram Language Mathematica</td><td>240702T230231Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273879#273879">att</a></td></tr>
 <tr d-ix="7"><td>144</td><td>Python 3.8 prerelease</td><td>240702T221752Z</td><td><a href="https://codegolf.stackexchange.com/questions/273872/sort-number-array/273874#273874">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 15 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 109 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>def f(a):x=a.index;z=x(0);a[x(i:=z or[j for j in a if x(j)-j][0])]=0;a[z]=i;return[i][a&gt;sorted(a):]or[i]+f(a)
+</code></pre>
+<p><a href="https://tio.run/##FY3NCgIhEIBfZY5KFtYWxIq9iMxBUGk86DIZmC9vu/fvZ/u1dy3Lc@M5Q0yQhJdrt/5CJcRuhu1CS@NdF7TaAZVdhlQZMlABD5SgiyzPGZ1GiVbv6EBLhmP7cnGEzr8@lVsMRxh3n/B0TObGVJpIwt0ULAq0gquCh4I7Sjn/" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 15 bytes</h1>
 <pre><code>nJ,i€1ṄḊ¡€ṚƬyµƬ
 </code></pre>
 <p>A monadic Link that accepts a list of 1-based values and prints each value to be swapped with <code>1</code> to stdout. Note, this also yields a list of lists which may be ignored by the caller (this is the states plus one extra, bogus state).</p>
@@ -56,7 +62,7 @@ n               -   {Current) not equal {that} (vectorises)
             y   -   translate {Current} using {that} -&gt; swap the Values
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>94</s> <s>91</s> <s>80</s> 79 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>94</s> <s>91</s> <s>80</s> 79 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>f=\(a){i=max(j&lt;-which(!a)-1,a[a&gt;seq(a)-1]*!j)
 a[a==i]=0
 if(a[j+1]&lt;-i)c(i,f(a))}
@@ -85,19 +91,13 @@ if(i)                   # and if the array wasn't already sorted
         ,f(a))}         # and recursively sort the swapped array
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 59 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 59 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;x.map(e=(c,u)=&gt;u-c&amp;&amp;u-(q=x[u&amp;&amp;print(u),u])&amp;&amp;e(x[u]=u,q))
 </code></pre>
 <p><a href="https://tio.run/##JYrBCoMwEAXv/ZBlF16KWguFsv6I5BCCgkJLtK7k72Ogt2Fm1nCGX9yXdLjzVWYtWYd8/4TEk3KEiQ7mIpE53jSPRpT25XuwCcwL0cRVejVsImXmscMDDVo80Xt53/5zhZpadGiqLBc" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 <p>Assumes first step moving 0 to front is optimal</p>
 <p>-2 bytes from Shaggy and -7 from Arnauld</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 111 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>def f(a):x=a.index;z=x(0);a[x(i:=z or next(j for j in a if x(j)-j))]=0;a[z]=i;return[i][a&gt;sorted(a):]or[i]+f(a)
-</code></pre>
-<p><a href="https://tio.run/##FY1BCsMgEEWvMssZakvatFAS7EXEhaDScaEytWBzeZvsPo/H@/XX3iXPzypj@BAhoqOla3fh7ENfN91xotWZjrzoDYpADr1hgrjPBJzBAUfomOiciKyednmzmlcJ7SvZsDXu9SnSgj/StsiOTsfNqMK5YURzUzArmBRcFTwU3C3R@AM" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>20</s> 19 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>[ÐÅΔNÊ}D(#s0k+=0‚Â‡
