--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240704T115705Z
+"   /golfscore                                      20240704T120410Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/258704.html">Custom Games of Life                            : 0258704</a>
 <a href="q/198237.html">Whats my telephone number?                      : 0198237</a>
 <a href="q/273875.html">Segments of a string doubling in length         : 0273875</a>
 <a href="q/102496.html">Interleave strings                              : 0102496</a>
